--- a/MakefileServer
+++ b/MakefileServer
@@ -1,13 +1,11 @@
-CC=g++
+CC=g++ -std=c++11
 CFLAGS=-c
 
 all: server
 
-server: server.o socket.o billing.o phone.o date.o parser.o select.o insert.o delete.o update.o
-	$(CC) server.o socket.o billing.o phone.o date.o parser.o select.o insert.o delete.o update.o -o server
+server: server.o billing.o phone.o date.o parser.o select.o insert.o delete.o update.o
+	$(CC) server.o billing.o phone.o date.o parser.o select.o insert.o delete.o update.o -o server
 
-socket.o: socket.cpp socket.h
-	$(CC) $(CFLAGS) socket.cpp
 billing.o: billing.cpp billing.h
 	$(CC) $(CFLAGS) billing.cpp
 phone.o: phone.cpp phone.h
@@ -24,7 +22,7 @@ delete.o: delete.cpp delete.h
 	$(CC) $(CFLAGS) delete.cpp
 update.o: update.cpp update.h
 	$(CC) $(CFLAGS) update.cpp
-server.o: server.cpp socket.cpp
+server.o: server.cpp
 	$(CC) $(CFLAGS) server.cpp
 
 clean:
